# HorribleResearchAgent

./: README.md  main.py  pyproject.toml
src/horribleresearchagent/: __init__.py  arxiv.py  cli.py
tests/: arxiv_test.py
