[project]
name = "horribleresearchagent"
version = "0.1.0"
description = "A Research Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
    "pydantic-ai>=1.87.0",
    "requests>=2.33.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
horribleagent = "horribleresearchagent.cli:run"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
docs = [
    "mkdocs>=1.6.1",
]

[tool.setuptools.packages.find]
where           = ['src']
include         = ['horribleresearchagent*']

